[project]
name = "drba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowiz>=2.4.0",
    "numpy>=1.16,<=1.23.5",
    "opencv-python>=4.1.2",
    "pillow>=9.3.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.35.0",
]
